2007-06-26  Kaz Sasayama  <kazssym@vx68k.org>

	* configure.ac: Moved libtool macros near the end.

2007-06-25  Kaz Sasayama  <kazssym@vx68k.org>

	* programs/clock.cpp (glclock::~glclock): Changed to use
	g_signal_handlers_disconnect_matched instead of
	gtk_signal_disconnect_by_data.

2007-06-23  Kaz Sasayama  <kazssym@vx68k.org>

	* configure.ac: Removed the test for asprintf.

2007-06-22  Kaz Sasayama  <kazssym@vx68k.org>

	* programs/clock.cpp (handle_button_press_event): Changed the
	return type from void to gboolean.

	* lib/Makefile.am (noinst_LIBRARIES): Renamed libclock to
	librglclock.
	* programs/Makefile.am (rglclock_LDADD): Changed libclock to
	librglclock.
	(EXTRA_DIST): Removed options-0.dtd.

	* Makefile.am (AUTOMAKE_OPTIONS): New macro.
	(SUBDIRS): Added testsuite.

	* configure.ac: Changed the source directory test file.
	Added testsuite/Makefilt to AC_CONFIG_FILES.

	* testsuite/config/unix.exp: New file.
	* testsuite/Makefile.am: New file.

2007-05-23  Kaz Sasayama  <kazssym@vx68k.org>

	* configure.ac: Changed VERSION to 2.0.3.

	* programs/glgtk.cpp: Moved from lib/gdk_gl.h.

	* programs/glgtk.h: Moved from lib/gdk_gl.h.
	(class glgtk_context): New class.

	* programs/clock.h: Moved from include/glclock.h.

	* programs/clock.cpp: Moved from lib/glclock.cc.

	* programs/Makefile.am (rglclock_SOURCES): Added clock.cpp,
	options.cpp, modaldialog.cpp, and glgtk.cpp, which were moved from
	lib with renaming.
	(rglclock_LDADD): Removed libutils.h.
	(noinst_HEADERS): Added clock.h and glgtk.h.

	* lib/Makefile.am (AM_CPPFLAGS): Renamed from old name INCLUDES
	and added an include path to $(top_srcdir)/programs.
	(noinst_LIBRARIES): Removed libutils.a.
	(libclock_a_SOURCES): Removed glclock.cc.
	(noinst_HEADERS): Removed gdk_gl.h.

	* include/Makefile.am (noinst_HEADERS): Removed glclock.h.

2007-05-21  Kaz Sasayama  <kazssym@vx68k.org>

	* configure.ac: Changed VERSION to 2.0.2.

2007-05-20  Kaz Sasayama  <kazssym@vx68k.org>
