@@ -9,6 +9,5 @@ AM_CPPFLAGS = -I $(top_srcdir)/lib -I $(top_srcdir)/include
 modules_LTLIBRARIES = libplain.la
 
 libplain_la_LDFLAGS = -module -avoid-version
-
 libplain_la_SOURCES = ../lib/simple.c
 libplain_la_LIBADD = $(PNG_LIBS)
